tests/baselines/reference/reservedWords2.errors.txt
tests/cases/compiler/reservedWords2.ts(1,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/compiler/reservedWords2.ts(1,8): error TS1109: Expression expected.
tests/cases/compiler/reservedWords2.ts(1,14): error TS1005: '(' expected.
tests/cases/compiler/reservedWords2.ts(1,16): error TS2304: Cannot find name 'require'.
tests/cases/compiler/reservedWords2.ts(1,31): error TS1005: ')' expected.
tests/cases/compiler/reservedWords2.ts(2,12): error TS2300: Duplicate identifier '(Missing)'.
tests/cases/compiler/reservedWords2.ts(2,14): error TS1003: Identifier expected.
tests/cases/compiler/reservedWords2.ts(2,20): error TS1005: '(' expected.
tests/cases/compiler/reservedWords2.ts(2,20): error TS2304: Cannot find name 'from'.
tests/cases/compiler/reservedWords2.ts(2,25): error TS1005: ')' expected.
tests/cases/compiler/reservedWords2.ts(4,5): error TS1134: Variable declaration expected.
tests/cases/compiler/reservedWords2.ts(4,12): error TS1109: Expression expected.
tests/cases/compiler/reservedWords2.ts(5,9): error TS2300: Duplicate identifier '(Missing)'.
tests/cases/compiler/reservedWords2.ts(5,10): error TS1003: Identifier expected.
tests/cases/compiler/reservedWords2.ts(5,18): error TS1005: '=>' expected.
tests/cases/compiler/reservedWords2.ts(6,7): error TS2300: Duplicate identifier '(Missing)'.
tests/cases/compiler/reservedWords2.ts(6,8): error TS1003: Identifier expected.
tests/cases/compiler/reservedWords2.ts(9,6): error TS1181: Array element destructuring pattern expected.
tests/cases/compiler/reservedWords2.ts(9,14): error TS1005: ';' expected.
tests/cases/compiler/reservedWords2.ts(9,18): error TS1005: '(' expected.
tests/cases/compiler/reservedWords2.ts(9,20): error TS1128: Declaration or statement expected.
tests/cases/compiler/reservedWords2.ts(10,5): error TS2300: Duplicate identifier '(Missing)'.
tests/cases/compiler/reservedWords2.ts(10,6): error TS1003: Identifier expected.


==== tests/cases/compiler/reservedWords2.ts (23 errors) ====
    import while = require("dfdf");
    ~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
           ~~~~~
!!! error TS1109: Expression expected.
                 ~
!!! error TS1005: '(' expected.
                   ~~~~~~~
!!! error TS2304: Cannot find name 'require'.
                                  ~
!!! error TS1005: ')' expected.
    import * as  while from "foo"
               
!!! error TS2300: Duplicate identifier '(Missing)'.
                 ~~~~~
!!! error TS1003: Identifier expected.
                       ~~~~
!!! error TS1005: '(' expected.
                       ~~~~
!!! error TS2304: Cannot find name 'from'.
                            ~~~~~
!!! error TS1005: ')' expected.
    
    var typeof = 10;
        ~~~~~~
!!! error TS1134: Variable declaration expected.
               ~
!!! error TS1109: Expression expected.
    function throw() {}
            
!!! error TS2300: Duplicate identifier '(Missing)'.
             ~~~~~
!!! error TS1003: Identifier expected.
                     ~
!!! error TS1005: '=>' expected.
    module void {}
          
!!! error TS2300: Duplicate identifier '(Missing)'.
           ~~~~
!!! error TS1003: Identifier expected.
    var {while, return} = { while: 1, return: 2 };
    var {this, switch: { continue} } = { this: 1, switch: { continue: 2 }};
    var [debugger, if] = [1, 2];
         ~~~~~~~~
!!! error TS1181: Array element destructuring pattern expected.
                 ~
!!! error TS1005: ';' expected.
                     ~
!!! error TS1005: '(' expected.
                       ~
!!! error TS1128: Declaration or statement expected.
    enum void {}
        
!!! error TS2300: Duplicate identifier '(Missing)'.
         ~~~~
!!! error TS1003: Identifier expected.
    
    
    